#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(file_server, 0.0.1)
AM_INIT_AUTOMAKE([foreign])
#AC_CONFIG_SRCDIR([ProcessUtil.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 fsclient/Makefile
                 test/Makefile
                 test_cache/Makefile])
AC_OUTPUT
