bin_PROGRAMS = fsclient
fsclient_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I../src
fsclient_SOURCES = main.cpp\
../src/Message.cpp\
../src/Message.h\
../src/SocketMessage.cpp\
../src/SocketMessage.h\
../src/ProcessUtil.cpp\
../src/ProcessUtil.h\
../src/types.h\
../src/monapi/messages.h\
../src/cmemoryinfo.cpp

