bin_PROGRAMS = file_server
file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
file_server_SOURCES = \
FileSystem.h\
IDEDriver.cpp\
IDEDriver.h\
Message.cpp\
Message.h\
VnodeCacher.cpp\
VnodeCacher.h\
messages.cpp\
SocketMessage.cpp\
SocketMessage.h\
cmemoryinfo.cpp\
ProcessUtil.cpp\
ProcessUtil.h\
main.cpp\
types.h\
vnode.h\
vnode.cpp\
VnodeManager.h\
VnodeManager.cpp\
FileServer.h\
FileServer.cpp\
ISO9660/ISO9660FileSystem.cpp\
ISO9660/ISO9660FileSystem.h
