# if you try valgrind
# export GLIBCXX_FORCE_NEW = 1

bin_PROGRAMS = file_server
file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I ../../../mona/tool/
file_server_SOURCES = \
FileSystem.h\
IDEDriver.cpp\
IDEDriver.h\
Message.cpp\
Message.h\
VnodeCacher.cpp\
VnodeCacher.h\
messages.cpp\
SocketMessage.cpp\
SocketMessage.h\
cmemoryinfo.cpp\
ProcessUtil.cpp\
ProcessUtil.h\
main.cpp\
types.h\
vnode.h\
vnode.cpp\
dtk5s.cpp\
dtk5s.h\
VnodeManager.h\
VnodeManager.cpp\
FileServer.h\
FileServer.cpp\
ISO9660/ISO9660FileSystem.cpp\
ISO9660/ISO9660FileSystem.h\
ISO9660/ISO9660.h\
FAT12/FAT12FileSystem.cpp\
FAT12/FAT12FileSystem.h\
FAT12/FDCDriver.cpp\
FAT12/FDCDriver.h\
FAT12/fat.cpp\
FAT12/endian_util.cpp\
Process/ProcessFileSystem.cpp\
Process/ProcessFileSystem.h

