# if you try valgrind
# export GLIBCXX_FORCE_NEW=1

bin_PROGRAMS = file_server
file_server_CXXFLAGS = -DON_LINUX -g -Wall -O3
file_server_SOURCES = \
error.h\
FileSystem.h\
FileDate.h\
IDEDriver.cpp\
IDEDriver.h\
IStorageDevice.h\
Message.cpp\
Message.h\
VnodeCacher.cpp\
VnodeCacher.h\
messages.cpp\
SocketMessage.cpp\
SocketMessage.h\
cmemoryinfo.cpp\
cmemoryinfo.h\
ProcessUtil.cpp\
ProcessUtil.h\
main.cpp\
types.h\
vnode.h\
vnode.cpp\
dtk5s.cpp\
dtk5s.h\
monapi/Array.h\
monapi/Assert.h\
monapi/CString.cpp\
monapi/CString.h\
monapi/cmemoryinfo.h\
monapi/messages.h\
servers/file.h\
servers/keyboard.h\
servers/mouse.h\
servers/net.h\
servers/process.h\
servers/servers.h\
VnodeManager.h\
VnodeManager.cpp\
FileServer.h\
FileServer.cpp\
ISO9660/ISO9660FileSystem.cpp\
ISO9660/ISO9660FileSystem.h\
ISO9660/ISO9660.h\
FAT12/FAT12FileSystem.cpp\
FAT12/FAT12FileSystem.h\
FAT12/FDCDriver.cpp\
FAT12/FDCDriver.h\
FAT12/fat_write/fat.cpp\
FAT12/fat_write/endian_util.cpp\
FAT12/fat_write/endian_util.h\
FAT12/fat_write/file.h\
FAT12/fat_write/fat.h\
FAT12/fat_write/IStorageDevice.h\
Process/ProcessFileSystem.cpp\
Process/ProcessFileSystem.h
