bin_PROGRAMS = test
test_CXXFLAGS = -DON_LINUX -g -Wall -O3 -I../src
test_LDFLAGS  = -lcppunit -ldl
test_SOURCES = main.cpp\
FileServerTest.h\
FileServerTest.cpp\
../src/messages.cpp\
../src/Message.cpp\
../src/cmemoryinfo.cpp\
../src/Message.h\
../src/monapi/messages.h\
../src/SocketMessage.cpp\
../src/SocketMessage.h\
../src/ProcessUtil.cpp\
../src/ProcessUtil.h\
../src/types.h

