bin_PROGRAMS = scheme
#scheme_INCLUDES=-I /usr/include -I /usr/include/stlport -I .
scheme_CXXFLAGS = -pg -I /usr/local/include/gc -fno-exceptions -fno-rtti -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
scheme_LDFLAGS = -pg -lgc
scheme_SOURCES = \
main.cpp\
Scheme.cpp\
Scheme.h\
Filter.h\
Assert.h\
Object.cpp\
Object.h\
Eval.cpp\
Eval.h\
Number.cpp\
Number.h\
String.cpp\
String.h\
Charcter.cpp\
Charcter.h\
Quote.cpp\
Quote.h\
Vector.cpp\
Vector.h\
Variable.cpp\
Variable.h\
Assignment.cpp\
Assignment.h\
SpecialIf.cpp\
SpecialIf.h\
Frame.cpp\
Frame.h\
Environment.cpp\
Environment.h\
Lambda.cpp\
Lambda.h\
Procedure.cpp\
Procedure.h\
Begin.cpp\
Begin.h\
Definition.cpp\
Definition.h\
Cond.cpp\
Cond.h\
Pair.cpp\
Pair.h\
Let.cpp\
Let.h\
LetAsterisk.cpp\
LetAsterisk.h\
Application.cpp\
Application.h\
Parser.cpp\
Parser.h\
Tokenizer.cpp\
Tokenizer.h\
SExp.cpp\
SExp.h\
Translator.cpp\
Translator.h\
PrimitiveProcedure.h\
PrimitiveProcedures/Set.cpp\
PrimitiveProcedures/Set.h\
PrimitiveProcedures/Display.cpp\
PrimitiveProcedures/Display.h\
PrimitiveProcedures/Load.h\
PrimitiveProcedures/Load.cpp\
PrimitiveProcedures/Eqv.h\
PrimitiveProcedures/Eqv.cpp\
PrimitiveProcedures/True.h\
PrimitiveProcedures/True.cpp\
PrimitiveProcedures/False.h\
PrimitiveProcedures/False.cpp\
PrimitiveProcedures/CharcterProcedures.cpp\
PrimitiveProcedures/VectorProcedures.cpp\
PrimitiveProcedures/NumberProcedures.cpp\
PrimitiveProcedures/StringProcedures.cpp\
PrimitiveProcedures/SymbolProcedures.cpp\
PrimitiveProcedures/PairProcedures.cpp\
PrimitiveProcedures/IOProcedures.cpp\
PrimitiveProcedures/EqualProcedures.cpp\
scheme.h\
scheme.cpp\
Macro.h\
Macro.cpp\
MacroFilter.h\
MacroFilter.cpp\
QuoteFilter.h\
QuoteFilter.cpp\
Error.cpp\
Error.h\
load.cpp


# And.cpp\
# And.h\
# Or.cpp\
# Or.h
