bin_PROGRAMS = scheme
#scheme_INCLUDES=-I /usr/include -I /usr/include/stlport -I .
scheme_CXXFLAGS = -pg -I /usr/local/include/gc -fno-exceptions -fno-rtti -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
scheme_LDFLAGS = -pg -lgc
scheme_SOURCES = \
Application.cpp\
Application.h\
Assert.h\
Assignment.cpp\
Assignment.h\
Begin.cpp\
Begin.h\
Charcter.cpp\
Charcter.h\
Cond.cpp\
Cond.h\
Definition.cpp\
Definition.h\
Environment.cpp\
Environment.h\
Error.cpp\
Error.h\
Eval.cpp\
Eval.h\
Frame.cpp\
Frame.h\
Lambda.cpp\
Lambda.h\
Let.cpp\
Let.h\
LetAsterisk.cpp\
LetAsterisk.h\
Macro.cpp\
Macro.h\
MacroFilter.cpp\
MacroFilter.h\
Number.cpp\
Number.h\
Object.cpp\
Object.h\
Pair.cpp\
Pair.h\
Parser.cpp\
Parser.h\
PrimitiveProcedure.h\
procedures/CharcterProcedures.cpp\
procedures/EqualProcedures.cpp\
procedures/False.cpp\
procedures/False.h\
procedures/IOProcedures.cpp\
procedures/NumberProcedures.cpp\
procedures/PairProcedures.cpp\
procedures/Procedure.h\
procedures/Set.cpp\
procedures/Set.h\
procedures/StringProcedures.cpp\
procedures/SymbolProcedures.cpp\
procedures/True.cpp\
procedures/True.h\
procedures/VectorProcedures.cpp\
Procedure.cpp\
Procedure.h\
Quote.cpp\
Quote.h\
QuoteFilter.cpp\
QuoteFilter.h\
SExp.cpp\
SExp.h\
Scheme.cpp\
Scheme.h\
SpecialIf.cpp\
SpecialIf.h\
String.cpp\
String.h\
Tokenizer.cpp\
Tokenizer.h\
Translator.cpp\
Translator.h\
Variable.cpp\
Variable.h\
Vector.cpp\
Vector.h\
load.cpp\
main.cpp\
scheme.cpp\
scheme.h
