bin_PROGRAMS = test_cpp
test_cpp_CXXFLAGS = -pg -I ../src -I /usr/local/include/gc -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC
test_cpp_LDFLAGS  = -lcppunit -lgc
test_cpp_SOURCES = main.cpp\
yaml.cpp\
yaml.h\
Filter.h\
MacroMatchTest.h\
MacroMatchTest.cpp\
MacroFilterTest.h\
MacroFilterTest.cpp\
../src/Error.h\
../src/Error.cpp\
../src/Translator.h\
../src/Translator.cpp\
../src/Tokenizer.cpp\
../src/Tokenizer.h\
../src/Number.cpp\
../src/Number.h\
../src/String.cpp\
../src/String.h\
../src/Definition.cpp\
../src/Definition.h\
../src/Quote.cpp\
../src/Quote.h\
../src/Object.cpp\
../src/Object.h\
../src/Eval.cpp\
../src/Eval.h\
../src/Variable.cpp\
../src/Variable.h\
../src/Assignment.cpp\
../src/Assignment.h\
../src/SpecialIf.cpp\
../src/SpecialIf.h\
../src/Frame.cpp\
../src/Frame.h\
../src/Environment.cpp\
../src/Environment.h\
../src/Lambda.cpp\
../src/Lambda.h\
../src/Procedure.cpp\
../src/Procedure.h\
../src/Begin.cpp\
../src/Begin.h\
../src/Node.h\
../src/Node.cpp\
../src/scheme.h\
../src/Macro.h\
../src/Macro.cpp\
../src/MacroFilter.h\
../src/MacroFilter.cpp\
../src/Parser.h\
../src/Parser.cpp\
../src/Cond.cpp\
../src/Cond.h\
../src/Pair.cpp\
../src/Pair.h\
../src/Let.cpp\
../src/Let.h\
../src/LetAsterisk.cpp\
../src/LetAsterisk.h\
../src/scheme.cpp\
../src/load.cpp\
../src/scheme.h\
../src/Application.cpp\
../src/Application.h\
../src/PrimitiveProcedure.h\
../src/PrimitiveProcedures/Plus.cpp\
../src/PrimitiveProcedures/Plus.h\
../src/PrimitiveProcedures/Minus.cpp\
../src/PrimitiveProcedures/Minus.h\
../src/PrimitiveProcedures/Divide.cpp\
../src/PrimitiveProcedures/Divide.h\
../src/PrimitiveProcedures/Multiply.cpp\
../src/PrimitiveProcedures/Multiply.h\
../src/PrimitiveProcedures/Cons.cpp\
../src/PrimitiveProcedures/Cons.h\
../src/PrimitiveProcedures/Car.cpp\
../src/PrimitiveProcedures/Car.h\
../src/PrimitiveProcedures/Cdr.cpp\
../src/PrimitiveProcedures/Cdr.h\
../src/PrimitiveProcedures/Display.cpp\
../src/PrimitiveProcedures/Display.h\
../src/PrimitiveProcedures/StringP.cpp\
../src/PrimitiveProcedures/StringP.h\
../src/PrimitiveProcedures/NumberP.cpp\
../src/PrimitiveProcedures/NumberP.h\
../src/PrimitiveProcedures/NumberEqual.cpp\
../src/PrimitiveProcedures/NumberEqual.h\
../src/PrimitiveProcedures/StringToNumber.cpp\
../src/PrimitiveProcedures/StringToNumber.h\
../src/PrimitiveProcedures/StringAppend.cpp\
../src/PrimitiveProcedures/StringAppend.h\
../src/PrimitiveProcedures/Set.cpp\
../src/PrimitiveProcedures/Set.h\
../src/PrimitiveProcedures/Load.h\
../src/PrimitiveProcedures/Load.cpp





#../src/And.cpp\
#../src/And.h\
#../src/Or.cpp\
#../src/Or.h
