bin_PROGRAMS = test_cpp
test_cpp_CXXFLAGS = -pg -I ../src -I /usr/local/include/gc -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC
test_cpp_LDFLAGS  = -lcppunit -lgc
test_cpp_SOURCES = main.cpp\
yaml.cpp\
yaml.h\
Filter.h\
MacroMatchTest.h\
MacroMatchTest.cpp\
MacroFilterTest.h\
MacroFilterTest.cpp\
QuoteFilterTest.h\
QuoteFilterTest.cpp\
../src/Scheme.cpp\
../src/Scheme.h\
../src/Error.h\
../src/Error.cpp\
../src/Translator.h\
../src/Translator.cpp\
../src/Tokenizer.cpp\
../src/Tokenizer.h\
../src/Number.cpp\
../src/Number.h\
../src/String.cpp\
../src/String.h\
../src/Charcter.cpp\
../src/Charcter.h\
../src/Vector.cpp\
../src/Vector.h\
../src/Definition.cpp\
../src/Definition.h\
../src/Quote.cpp\
../src/Quote.h\
../src/Object.cpp\
../src/Object.h\
../src/Eval.cpp\
../src/Eval.h\
../src/Variable.cpp\
../src/Variable.h\
../src/Assignment.cpp\
../src/Assignment.h\
../src/SpecialIf.cpp\
../src/SpecialIf.h\
../src/Frame.cpp\
../src/Frame.h\
../src/Environment.cpp\
../src/Environment.h\
../src/Lambda.cpp\
../src/Lambda.h\
../src/Procedure.cpp\
../src/Procedure.h\
../src/Begin.cpp\
../src/Begin.h\
../src/SExp.h\
../src/SExp.cpp\
../src/scheme.h\
../src/Macro.h\
../src/Macro.cpp\
../src/MacroFilter.h\
../src/MacroFilter.cpp\
../src/QuoteFilter.h\
../src/QuoteFilter.cpp\
../src/Parser.h\
../src/Parser.cpp\
../src/Cond.cpp\
../src/Cond.h\
../src/Pair.cpp\
../src/Pair.h\
../src/Let.cpp\
../src/Let.h\
../src/LetAsterisk.cpp\
../src/LetAsterisk.h\
../src/scheme.cpp\
../src/load.cpp\
../src/scheme.h\
../src/Application.cpp\
../src/Application.h\
../src/PrimitiveProcedure.h\
../src/PrimitiveProcedures/Display.cpp\
../src/PrimitiveProcedures/Display.h\
../src/PrimitiveProcedures/Set.cpp\
../src/PrimitiveProcedures/Set.h\
../src/PrimitiveProcedures/Eqv.h\
../src/PrimitiveProcedures/Eqv.cpp\
../src/PrimitiveProcedures/True.h\
../src/PrimitiveProcedures/True.cpp\
../src/PrimitiveProcedures/False.h\
../src/PrimitiveProcedures/False.cpp\
../src/PrimitiveProcedures/Load.h\
../src/PrimitiveProcedures/Load.cpp\
../src/PrimitiveProcedures/CharcterProcedures.cpp\
../src/PrimitiveProcedures/VectorProcedures.cpp\
../src/PrimitiveProcedures/NumberProcedures.cpp\
../src/PrimitiveProcedures/StringProcedures.cpp\
../src/PrimitiveProcedures/SymbolProcedures.cpp\
../src/PrimitiveProcedures/PairProcedures.cpp\
../src/PrimitiveProcedures/IOProcedures.cpp\
../src/PrimitiveProcedures/EqualProcedures.cpp

